<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/InventoryOverview"
    tools:context="com.example.fatoumeh.shumanatorbookstore.NewInventoryActivity">
    <TextView
        android:text="@string/product_info_label"
        style="@style/InventoryTitles"/>
    <EditText
        android:id="@+id/edit_text_product_name"
        android:hint="@string/product_name_edittext"
        style="@style/ProductSupplierName" />
    <EditText
        android:id="@+id/edit_text_product_price"
        android:hint="@string/product_price_edittext"
        android:inputType="numberDecimal"
        style="@style/PriceQuantity"/>
    <LinearLayout
        style="@style/InventoryChildLL"
        android:layout_marginBottom="20dp">
        <Button
            android:id="@+id/increaseQty"
            android:text="@string/increase_button_label"
            style="@style/PlusMinusButton"/>
        <EditText
            android:id="@+id/edit_text_product_quantity"
            android:hint="@string/product_quantity_edittext"
            android:textAlignment="center"
            android:inputType="number"
            style="@style/PriceQuantity" />
        <Button
            android:id="@+id/decreaseQty"
            android:text="@string/decrease_button_label"
            style="@style/PlusMinusButton" />
    </LinearLayout>
    <TextView
        android:text="@string/supplier_info_label"
        style="@style/InventoryTitles" />
    <EditText
        android:id="@+id/edit_text_supplier_name"
        android:hint="@string/supplier_name_edittext"
        style="@style/ProductSupplierName"/>
    <LinearLayout
        style="@style/InventoryChildLL">
        <EditText
            android:id="@+id/edit_text_supplier_phone"
            android:hint="@string/supplier_phone_edittext"
            android:inputType="phone"
            style="@style/SupplierPhoneDetails"
            android:layout_weight="0.5" />
        <Button
            android:id="@+id/orderInventory"
            android:text="@string/order_button_label"
            android:layout_margin="@dimen/min_margin"
            style="@style/SupplierPhoneDetails"
            android:layout_weight="0.3"/>
    </LinearLayout>
    <LinearLayout
        style="@style/InventoryChildLL">
        <Button
            android:id="@+id/saveChanges"
            android:text="@string/save_button_label"
            style="@style/SaveDiscardDelete" />
        <Button
            android:id="@+id/discardChanges"
            android:text="@string/discard_button_label"
            style="@style/SaveDiscardDelete" />
        <Button
            android:id="@+id/deleteInventory"
            android:text="@string/delete_button_label"
            style="@style/SaveDiscardDelete" />
    </LinearLayout>
</LinearLayout>
